--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,36 @@
 :root {
+  --primary-color-100: #ffffff;
+  --primary-color-200: #f3f3f3;
+  --primary-color-300: #d9d9d9;
+  --primary-color-400: #414141;
+  --primary-color-500: #000000;
+
+  --font-small: 16px;
+  --font-medium: 32px;
+  --font-large: 64px;
+
+  --spacing-small: 10px;
+  --spacing-medium: 20px;
+  --spacing-large: 40px;
+
+  --margin-small: 10px;
+  --margin-medium: 20px;
+  --margin-large: 40px;
+
+  --padding-small: 10px;
+  --padding-medium: 20px;
+  --padding-large: 40px;
+
+  max-width: 100vw;
+  min-height: 100vh;
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: var(--primary-color-400);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,9 +38,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+main {
+  padding-inline: var(--spacing-medium);
+}
+
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
@@ -24,10 +52,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -56,13 +80,20 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: var(--primary-color-400);
+    background-color: var(--primary-color-100);
   }
   a:hover {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: var(--primary-color-200);
   }
+}
+
+.welcome {
+  color: var(--primary-color-100);
+  text-align: center;
+  background-color: var(--primary-color-400);
+  padding: var(--spacing-small) var(--spacing-medium);
 }
