--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,7 +39,8 @@
 }
 
 main {
-  padding-inline: var(--spacing-medium);
+  background-color: var(--primary-color-200);
+  padding: var(--spacing-small) var(--spacing-medium);
 }
 
 a {
@@ -96,4 +97,19 @@ button:focus-visible {
   text-align: center;
   background-color: var(--primary-color-400);
   padding: var(--spacing-small) var(--spacing-medium);
+}
+
+.loading {
+  text-align: center;
+  opacity: 0;
+  animation: fadeIn 0.5s linear 0.5s forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
