--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,8 +39,11 @@
 }
 
 main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: var(--primary-color-200);
-  padding: var(--spacing-small) var(--spacing-medium);
+  padding: var(--spacing-small) var(--spacing-medium) var(--spacing-medium);
 }
 
 a {
@@ -61,13 +64,13 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  border: 0.15em solid transparent;
+  border-radius: 0.6em;
+  padding: 0.5em 1.5em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--primary-color-300);
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -77,26 +80,6 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: var(--primary-color-400);
-    background-color: var(--primary-color-100);
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: var(--primary-color-200);
-  }
-}
-
-.welcome {
-  color: var(--primary-color-100);
-  text-align: center;
-  background-color: var(--primary-color-400);
-  padding: var(--spacing-small) var(--spacing-medium);
 }
 
 .loading {
@@ -111,5 +94,18 @@ button:focus-visible {
   }
   100% {
     opacity: 1;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: var(--primary-color-400);
+    background-color: var(--primary-color-100);
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: var(--primary-color-300);
   }
 }
