Implement front-end log-in, log-out, profile context, and some fixes
 - Fixed the back end's route that handled user data; removed the need
   for user ID in the uri, so that the client can request user data
   using their JWT
 - Implemented localStorageService for JWT storage
 - Implemented authService for authentication-related methods
 - Implemented login page that, upon successful logins, gets and stores
   the client's JWT in local storage
 - Implemented ProfileContext, which retrieves the client's user data
   when the app mounts and then provides the app the user data
 - Updated the home page to show that the user is logged in

--- a/frontend/src/components/layout/Header.module.css
+++ b/frontend/src/components/layout/Header.module.css
@@ -23,3 +23,12 @@
   color: var(--primary-color-400);
   text-decoration: underline;
 }
+
+.header button {
+  color: var(--primary-color-400);
+  padding: 0;
+}
+.header button:hover {
+  text-decoration: underline;
+  border: solid transparent;
+}
