--- a/frontend/src/components/posts/Post.module.css
+++ b/frontend/src/components/posts/Post.module.css
@@ -1,9 +1,11 @@
 .section {
+  color: var(--primary-color-400);
   height: 300px;
   background-color: var(--primary-color-100);
   padding: var(--spacing-small) var(--spacing-medium);
 }
 .section:hover {
+  cursor: pointer;
   box-shadow: darkgray 0 0 10px;
 }
 
