--- a/frontend/src/components/posts/PostSection.module.css
+++ b/frontend/src/components/posts/PostSection.module.css
@@ -8,3 +8,17 @@
   text-align: left;
   overflow-wrap: break-word;
 }
+
+.row {
+  display: flex;
+  align-items: center;
+  gap: var(--spacing-small);
+}
+
+.meta {
+  margin-top: -30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: var(--spacing-small);
+}
