--- a/frontend/src/components/posts/Post.module.css
+++ b/frontend/src/components/posts/Post.module.css
@@ -8,9 +8,15 @@
   cursor: pointer;
   box-shadow: darkgray 0 0 10px;
 }
+.section:focus {
+  box-shadow: darkgray 0 0 10px;
+}
 
 .meta {
-  margin-top: -20px;
+  margin-block: -35px -15px;
+  display: flex;
+  align-items: center;
+  gap: var(--spacing-small);
 }
 
 .description {
