--- a/clientViewer/src/index.css
+++ b/clientViewer/src/index.css
@@ -46,6 +46,13 @@ main {
   padding: var(--spacing-small) var(--spacing-medium) var(--spacing-medium);
 }
 
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: var(--spacing-small) var(--spacing-medium) var(--spacing-medium);
+}
+
 a {
   font-weight: 500;
   text-decoration: inherit;
