Implement post create page and HTML encoding, purification, and decoding
 - Implemented a page for users to create posts using tinymce API
 - Implemented he library to decode HTML on the front end
 - Implemented jsdom and dompurify libraries to purify HTML on the front
   and back ends

--- a/clientEditor/src/index.css
+++ b/clientEditor/src/index.css
@@ -50,6 +50,8 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  box-sizing: border-box;
   padding: var(--spacing-small) var(--spacing-medium) var(--spacing-medium);
 }
 
@@ -103,6 +105,9 @@ form input {
 form button {
   margin-block: var(--spacing-medium);
   align-self: center;
+}
+form input:hover {
+  cursor: pointer;
 }
 
 .error {
