--- a/clientEditor/src/components/common/Banner.module.css
+++ b/clientEditor/src/components/common/Banner.module.css
@@ -1,6 +1,17 @@
 .section {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-medium);
   color: var(--primary-color-100);
   text-align: center;
   background-color: var(--primary-color-400);
-  padding: var(--spacing-small) var(--spacing-medium);
+  padding: var(--spacing-large) var(--spacing-medium);
+}
+
+.section > * {
+  margin-block: 0;
+}
+
+.section :nth-child(2) {
+  margin-bottom: var(--spacing-medium);
 }
