--- a/clientEditor/src/components/comments/Comment.module.css
+++ b/clientEditor/src/components/comments/Comment.module.css
@@ -1,8 +1,19 @@
 .section {
-  display: block;
+  display: grid;
+  grid-template: 30px 1fr 30px / 1fr 40px 40px;
   padding: var(--spacing-small) var(--spacing-medium);
 }
 
-.section p {
+.section > p {
   overflow-wrap: break-word;
+  padding-left: 8px;
+}
+
+.content {
+  grid-column: 1 / 4;
+}
+
+.top {
+  display: grid;
+  grid-template-columns: 1fr 40px 40px;
 }
