--- a/clientEditor/src/components/posts/Post.module.css
+++ b/clientEditor/src/components/posts/Post.module.css
@@ -4,6 +4,7 @@
   height: 300px;
   background-color: var(--primary-color-100);
   padding: var(--spacing-small) var(--spacing-medium);
+  position: relative;
 }
 .section:hover {
   cursor: pointer;
@@ -21,8 +22,13 @@
 }
 
 .description {
-  height: 200px;
+  height: 100px;
   overflow-wrap: break-word;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.bottom {
+  position: absolute;
+  bottom: 20px;
 }
