Implement update functionality for comments, and some fixes
 - Implemented an update functionality for comments
 - Fixed controller for editing comments so that the comment's
   post ID is not needed
 - Fixed authorization in regards to editing and deletion so that
   users now can only edit and delete their own posts and comments

--- a/clientEditor/src/index.css
+++ b/clientEditor/src/index.css
@@ -107,6 +107,10 @@ form button {
   align-self: center;
 }
 
+textarea {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
 dialog {
   padding: var(--spacing-medium);
   border: none;
