--- a/clientEditor/src/components/comments/Comment.module.css
+++ b/clientEditor/src/components/comments/Comment.module.css
@@ -9,11 +9,35 @@
   padding-left: 8px;
 }
 
+.top {
+  display: grid;
+  grid-template-columns: 1fr 40px 40px;
+}
+
 .content {
   grid-column: 1 / 4;
 }
 
-.top {
-  display: grid;
-  grid-template-columns: 1fr 40px 40px;
+.form {
+  grid-column: 1 / 4;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: var(--spacing-small);
+  padding: 0;
+}
+
+.form textarea {
+  min-width: 300px;
+  flex: 1;
+}
+
+.form button {
+  display: inline-block;
+  padding: 5px;
+  margin: 0;
+}
+
+.form p {
+  width: 100%;
 }
